--- a/src/components/gameTable.css
+++ b/src/components/gameTable.css
@@ -2,16 +2,19 @@
 .gameTable {
     text-align: center;
     max-width: 400px;
-    margin: auto;
-    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 10px;
 }
 
 .gameCard {
-    background-color: #1F56A0;
-    border: 0px;
-    border-radius: 15px;
+    margin-bottom: 5px;
 }
 
 .userTime {
     margin-bottom: 0px;
+}
+
+.middleRow {
+    border-bottom: 2px white dotted;
 }
