--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,18 @@ h1, h2, h3, p, span {
     border-bottom-width: 10px;  
 }
 
+#header-headline-1 {
+    font-size: 5vh;
+}
+
+#header-text-1 {
+    font-size: 2.5vh;
+}
+
+#header-text-2 {
+    font-size: 2vh;
+}
+
 .timer {
     box-shadow: 0 0 0 4px white , 0 0 0 0;
 }
